<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashActivity"
    android:background="@drawable/splash_bg"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="136dp"
        android:layout_height="198dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/splash_text"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/btn_single_ply"
        android:text="@string/btn_text1"
        android:textSize="23sp"
        android:textColor="@color/btn_text_color"
        android:layout_marginTop="95dp"
        android:layout_width="290dp"
        android:layout_height="60dp"
        android:background="@drawable/btn_background"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/baloo"/>

    <Button
        android:id="@+id/btn_multi_ply"
        android:text="@string/btn_text2"
        android:textSize="23sp"
        android:textColor="@color/btn_text_color"
        android:layout_marginTop="13dp"
        android:layout_width="290dp"
        android:layout_height="60dp"
        android:background="@drawable/btn_background"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/baloo"/>


    <Button
        android:id="@+id/btn_exit_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_exit"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:text="@string/btn_exit"
        android:textColor="@color/black"
        android:textSize="23sp"
        android:fontFamily="@font/baloo"/>







</LinearLayout>
