<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="140dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_with_shadow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/msg_exit"
                android:textColor="@android:color/white"
                android:fontFamily="@font/baloo"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:textSize="18dp"
                android:padding="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2"
            android:padding="30dp">

            <Button
                android:id="@+id/btn_yes"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_exit"
                android:text="@string/btn_yes"
                android:fontFamily="@font/baloo"
                android:textSize="23sp"/>

            <Button
                android:id="@+id/btn_no"
                android:layout_marginLeft="50dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_exit"
                android:text="@string/btn_no"
                android:fontFamily="@font/baloo"
                android:textSize="23sp"/>

        </LinearLayout>





    </LinearLayout>

</android.support.constraint.ConstraintLayout>